<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree Apps</string>
    <string name="action_settings">Settings</string>

    <string name="spotify_button">SPOTIFY STREAMER</string>
    <string name="scores_button">SCORES APP</string>
    <string name="library_button">LIBRARY APP</string>
    <string name="build_button">BUILD IT BIGGER</string>
    <string name="bacon_button">BACON READER</string>
    <string name="capstone_button">CAPSTONE: MY OWN APP</string>

    <string name="footer">Designed by Emerset Farquharson</string>
</resources>
