<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="ifContentScrolls" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffd1f8ff">

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:layout_marginTop="5dp"
        android:id="@+id/title"
        android:textColor="#ff494949" />

    <Button
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify_button"
        android:id="@+id/spotify_button"
        android:layout_marginTop="45dp"
        android:background="#ff6d8aff"
        android:textColor="#fffff543" />

    <Button
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/scores_button"
        android:id="@+id/scores_button"
        android:layout_marginTop="28dp"
        android:background="#ff6d8aff"
        android:textColor="#fffff543" />

    <Button
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/library_button"
        android:id="@+id/library_button"
        android:layout_marginTop="28dp"
        android:background="#ff6d8aff"
        android:textColor="#fffff543" />

    <Button
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/build_button"
        android:id="@+id/build_button"
        android:layout_marginTop="28dp"
        android:background="#ff6d8aff"
        android:textColor="#fffff543" />

    <Button
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/bacon_button"
        android:id="@+id/bacon_button"
        android:layout_marginTop="28dp"
        android:background="#ff6d8aff"
        android:textColor="#fffff543" />

    <Button
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone_button"
        android:id="@+id/capstone_button"
        android:layout_marginTop="28dp"
        android:background="#ff6d8aff"
        android:textColor="#fffff543" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/footer"
            android:layout_marginTop="28dp"
            android:id="@+id/footer"
            android:layout_gravity="center_horizontal"
            android:textColor="#ff545454" />

    </LinearLayout>

</ScrollView>